fix: change justify

--- a/src/app/carts/carts.component.scss
+++ b/src/app/carts/carts.component.scss
@@ -3,7 +3,7 @@
   min-height: calc(100vh - 201px);
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   padding: 40px 0 10px 0;
 
